<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyC2EuPFNKO8_6_MT9549SUaNiSD1kR0JUM</string>
    <string name="adMobId">ca-app-pub-7334149626969651~5628521736</string>
    <string name="ad_unit_id_banner">ca-app-pub-7334149626969651/1445272091</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-7334149626969651/4219060505</string>
    <string name="ad_unit_id_native">ca-app-pub-5796647361205061/4502092234</string>
    <string name="app_name">Fann Direct</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1102798626567378</string>
    <string name="fb_login_protocol_scheme">fb1102798626567378</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">Change Password</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Location</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account?<b> Signup</b></string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="signup_as_servie_provicer">Signup as Service Provider</string>
    <string name="by_registering_you_agree_to_terms_condition">By registering you agree to Terms &amp; Conditions</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="search_for_a_service">Search for a service...</string>
    <string name="profile">Profile</string>
    <string name="feeds">Feeds</string>
    <string name="message">Messages</string>
    <string name="fanns">Fanns</string>
    <string name="fann">Fann</string>
    <string name="fanns_request">Fanns Requests</string>
    <string name="fanns_request_1">Fann Request</string>
    <string name="promotions">Promotions</string>
    <string name="settings">Settings</string>
    <string name="posts">Posts</string>
    <string name="promotions_posts">Promotion Posts</string>
    <string name="my_services">My Services</string>
    <string name="works_at">Works at:</string>
    <string name="about">About</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="profession">Profession</string>
    <string name="hobbies">Hobbies</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_fann">Add Fann</string>
    <string name="show_profile">Show Profile</string>
    <string name="fann_requests">Fann Requests</string>
    <string name="fann_request">Fann Request</string>
    <string name="submit">Submit</string>
    <string name="date_before_error">Selected Date is before Current Date</string>
    <string name="less_time_error">Selected Time is in the Past</string>
    <string name="select_pickup_date_first">Select Pickup Date First</string>
    <string name="book_a_service">Book A Service</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_verification">Email Verification</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="to_reset_your_password_please_enter_the_n_email_address_you_provided_in_the_sign_up_process">To reset your password,please enter the \n email address you provided in the sign up process</string>
    <string name="enter_your_4_digit_code_here">Enter your 5 digit code here</string>
    <string name="enter_code">Enter Code</string>
    <string name="dob">Date of Birth</string>
    <string name="date_after_error">Selected Date is before Current Date</string>
    <string name="privacy_setting">Privacy Settings</string>
    <string name="update_password">Update Password</string>
    <string name="services">Services</string>
    <string name="certificate_license">Certificate License</string>
    <string name="insurance_avaliable">Insurance Avaliable</string>
    <string name="insurance_Information">Insurance Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="notifications">Notifications</string>
    <string name="service_history">Service History</string>
    <string name="select_date">Select Date</string>
    <string name="service_title">Service Title:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reject">Reject</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="are_you_sure_you_want_to_delete_post">Are you sure you want to delete this post?</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want to delete this acoount?</string>
    <string name="are_you_sure_you_want_to_report_post">Are you sure you want to report this post?</string>
    <string name="are_you_sure_you_want_to_report_comment">Are you sure you want to report this comment?</string>
    <string name="are_you_sure_you_want_to_report_user">Are you sure you want to report this user?</string>
    <string name="are_you_sure_you_want_to_cancel_requst">Are you sure you want to cancel request?</string>
    <string name="are_you_sure_you_want_to_delete_message">Are you sure you want to delete message?</string>
    <string name="are_you_sure_you_want_to_delete_comment">Are you sure you want to delete comment?</string>
    <string name="are_you_sure_you_want_to_delete_chat">Are you sure you want to delete chat?</string>
    <string name="are_you_sure_you_want_to_unfriend_user">Are you sure you want to unfann user</string>
    <string name="are_you_sure_you_want_to_complete_service">Are you sure you want to complete this service?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="rate_techinician">Rate Techinician</string>
    <string name="wall_posts">Wall Posts</string>
    <string name="favorite">Favorites</string>
    <string name="promotions_feeds">Promotion Feeds</string>
    <string name="chat">Chat</string>
    <string name="chat_box">Chat Box</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="enter_confirm_password">Confirm Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="confirmpasswordLength">Confirm Password cannot be less than 6 characters</string>
    <string name="enter_FullName">Name cannot be Empty</string>
    <string name="enter_email">Email Address is not valid</string>
    <string name="enter_MobileNum">Mobile number cannot be Empty</string>
    <string name="enter_field">this field can not be empty</string>
    <string name="enter_valid_password">Password cannot be less than 6 characters</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="blocked_by_admin">Blocked by admin</string>
    <string name="ok">Ok</string>
    <string name="delete_post">Delete Post</string>
    <string name="report_user">Report User</string>
    <string name="report_post">Report Post</string>
    <string name="service_provider">Service Provider</string>
    <string name="facebook">Facebook</string>
</resources>