<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="@dimen/x35"
            android:layout_height="@dimen/x40"
            android:layout_marginStart="@dimen/x7"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backbtn1" />

        </LinearLayout>

        <com.app.fandirect.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-40dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/x18"
            app:typeface="@string/font_normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x30"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginTop="@dimen/x10"
        android:orientation="vertical">

        <com.app.fandirect.ui.views.AnyEditTextView
            android:id="@+id/txt_old_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/x10"
            android:drawableStart="@drawable/pass"
            android:hint="@string/old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_color" />

        <com.app.fandirect.ui.views.AnyEditTextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/x10"
            android:drawableStart="@drawable/pass"
            android:hint="@string/new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_color" />

        <com.app.fandirect.ui.views.AnyEditTextView
            android:id="@+id/txt_confpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/x10"
            android:drawableStart="@drawable/pass"
            android:hint="@string/confirm_pass"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_color" />

        <Button
            android:id="@+id/btn_update_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x45"
            android:layout_marginTop="@dimen/x20"
            android:background="@drawable/rounded_button"
            android:text="@string/update_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/x16" />
    </LinearLayout>

</LinearLayout>